pesquisa finalizada, inicio das resenhas

--- a/src/app/cadastro-vinho/cadastro-vinho.component.html
+++ b/src/app/cadastro-vinho/cadastro-vinho.component.html
@@ -11,8 +11,7 @@
 </div>
 </div>
   <h2>Tipos de vinho</h2>
-  <button class=btn active value="Tinto" id="tipoVinho" #ref1 (click)="vinho.tipo = ref1.value"
-    type="button">Tinto</button>
+  <button class=btn active value="Tinto" id="tipoVinho" #ref1 (click)="vinho.tipo = ref1.value" type="button">Tinto</button>
   <button class=btn value="Branco" id="tipoVinho" #ref2 (click)="vinho.tipo = ref2.value" type="button">Branco</button>
   <button class=btn value="Vinho Espumante" id="tipoVinho" #ref3 (click)="vinho.tipo = ref3.value" type="button">Vinho
     espumante</button>
