--- a/src/app/pesquisa/pesquisa.component.css
+++ b/src/app/pesquisa/pesquisa.component.css
@@ -1,4 +1,8 @@
-.tela-toda{
+a {
+  text-decoration: none;
+}
+
+.tela-toda {
   display: grid;
   grid-template-columns: 1fr 2fr;
 }
@@ -28,11 +32,11 @@ button {
   margin-top: 2%;
 }
 
-button:hover{
-  background-color:#0e2430;
+button:hover {
+  background-color: #0e2430;
 }
 
-button:active{
+button:focus {
   background-color: #0e2430;
 }
 
@@ -44,35 +48,35 @@ button:active{
   left: 10px;
   border-right: 1px solid white;
   padding-right: 10px;
-
 }
 
 .search {
+  margin: 0;
+  display: grid;
+  grid-template-columns: 1.2fr 0.8fr;
   position: relative;
-  width: 200px;
-  height: 25px;
-  left: 5%;
+  justify-items: center;
 }
 
+
 .search input {
-  position: absolute;
+  left: 5%;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   color: white;
   background: transparent;
   outline: none;
   border: 1px solid white;
   border-radius: 4px;
   padding: 0 10px 0 45px;
+  width: 200px;
+  height: 25px;
 }
 
- .search input::placeholder {
+.search input::placeholder {
   color: white;
 }
 
-mat-slider{
+mat-slider {
   left: 20px;
 }
 
@@ -81,33 +85,54 @@ mat-slider{
   font-weight: bold;
 }
 
-.main{
+.main {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
-.coluna-1{
+.coluna-1 {
   margin-top: 2%;
-  background-color:#fc3a51;
+  background-color: #fc3a51;
   height: 100%;
 }
 
-.coluna-2{
+.coluna-2 {
   margin-top: 2%;
 }
 
-h3{
+h3 {
   text-align: center;
   font-size: x-large;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h2{
+h2 {
   margin-left: 5%;
   margin-top: 10%;
 }
 
 .radio2 {
   margin-left: 5%;
-  font-size:medium;
+  font-size: medium;
+}
+
+.imagemVinho img {
+  width: 70%
+}
+
+.imagemVinho {
+  align-self: center;
+}
+
+.vinho {
+  background-color: #fc3a51;
+  margin: 2%;
+  display: grid;
+  grid-template-columns: 0.5fr 1fr 0.5fr;
+  border-radius: 15px;
+}
+
+.botoesVinho {
+  align-self: center;
+  margin: 3%
 }
