--- a/src/app/pesquisa/pesquisa.component.html
+++ b/src/app/pesquisa/pesquisa.component.html
@@ -149,7 +149,7 @@
           </div>
           <div class="botoesVinho">
             <a href="/vinho/{{vin.productName}}"><button type="button">Veja mais sobre o vinho</button></a>
-            <button type="button">Adicione uma resenha</button>
+            <a href="/resenha/{{vin.productName}}"><button type="button">Adicione uma resenha</button></a>
           </div>
         </div>
 
