--- a/src/app/resenhas/resenha.component.html
+++ b/src/app/resenhas/resenha.component.html
@@ -1,60 +1,29 @@
-<body><div class="container">
+<body>
+  <div class="container">
     <div class="header-cadastrar">
-    <h1>CADASTRAR VINHO</h1>
-  </div>
-  <div class="card">
-    <br><br>Imagem do vinho: <input [(ngModel)]="vinho.file" type="text" id="file" name="file" class="vinho"
-      placeholder="Cole o link da imagem do vinho">
-    <br><br>Nome da vinícula: <input [(ngModel)]="vinho.vinicula" type="text" id="vinicula" name="vinicula" class="vinho"
-      placeholder="Vinícula">
-    <br><br>Nome do vinho: <input [(ngModel)]="vinho.nome" type="text" id="nome" name="nome" placeholder="Vinho" class="vinho3">
-  </div>
-  </div>
-    <h2>Tipos de vinho</h2>
-    <button class=btn active value="Tinto" id="tipoVinho" #ref1 (click)="vinho.tipo = ref1.value" type="button">Tinto</button>
-    <button class=btn value="Branco" id="tipoVinho" #ref2 (click)="vinho.tipo = ref2.value" type="button">Branco</button>
-    <button class=btn value="Vinho Espumante" id="tipoVinho" #ref3 (click)="vinho.tipo = ref3.value" type="button">Vinho
-      espumante</button>
-    <button class=btn value="Rose" id="tipoVinho" #ref4 (click)="vinho.tipo = ref4.value" type="button">Rosé</button>
-    <button class=btn value="Sobremesa" id="tipoVinho" #ref5 (click)="vinho.tipo = ref5.value"
-      type="button">Sobremesa</button>
-    <button class=btn value="Fortificado" id="tipoVinho" #ref6 (click)="vinho.tipo = ref6.value"
-      type="button">Fortificado</button>
-  
-    <h2>Uvas</h2>
-    <button value="Cabernet" id="tipoUva" #ref1 (click)="vinho.uva = ref1.value" type="button">Cabernet Franc</button>
-    <button value="Sauvignon" id="tipoUva" #ref2 (click)="vinho.uva = ref2.value" type="button">Cabernet
-      Sauvignon</button>
-    <button value="Chardonnay" id="tipoUva" #ref3 (click)="vinho.uva = ref3.value" type="button">Chardonnay</button>
-    <button value="Grenache" id="tipoUva" #ref4 (click)="vinho.uva = ref4.value" type="button">Grenache</button>
-    <button value="Malbec" id="tipoUva" #ref5 (click)="vinho.uva = ref5.value" type="button">Malbec</button>
-    <button value="Merlot" id="tipoUva" #ref6 (click)="vinho.uva = ref6.value" type="button">Merlot</button>
-    <button value="Pinot Noir" id="tipoUva" #ref7 (click)="vinho.uva = ref7.value" type="button">Pinot Noir</button>
-    <button value="Riesling" id="tipoUva" #ref8 (click)="vinho.uva = ref8.value" type="button">Riesling</button>
-    <button value="Sauvignon Blanc" id="tipoUva" #ref9 (click)="vinho.uva = ref9.value" type="button">Sauvignon
-      Blanc</button>
-    <button value="Shiraz" id="tipoUva" #ref10 (click)="vinho.uva = ref10.value" type="button">Shiraz</button>
-  
-    <div class="tela-inteira">
-      <div class="coluna1">
-    <h2>País</h2>
-    <div class="search">
-      <input type="text" [(ngModel)]="vinho.pais" placeholder="Insira um país">
+      <h1>Adicionar Resenha</h1>
     </div>
-  </div>
-    <div class="coluna2">
-    <h2>Harmonizações</h2>
-    <div class="search">
-      <input type="text" [(ngModel)]="vinho.harmonizacoes" placeholder="Insira uma harmonização">
+    <div class="title">
+        <h2>{{resenha.productName}}</h2>
+      </div>
+    <div class="card">
+      <h2>Estrelas</h2>
+      <div class="buttons">
+        <div>
+          <button value=1 id="estrelas" #ref1 (click)="resenha.estrelas = ref1.value" type="button">1</button>
+          <button value=2 id="estrelas" #ref2 (click)="resenha.estrelas = ref2.value" type="button">2</button>
+          <button value=3 id="estrelas" #ref3 (click)="resenha.estrelas = ref3.value" type="button">3</button>
+          <button value=4 id="estrelas" #ref4 (click)="resenha.estrelas = ref4.value" type="button">4</button>
+          <button value=5 id="estrelas" #ref5 (click)="resenha.estrelas = ref5.value" type="button">5</button>
+        </div>
+      </div>
+      <br><br>
+      <h2>Resenha</h2>
+      <input [(ngModel)]="resenha.resenha" type="text" id="resenha" name="resenha"
+        placeholder="Escreva aqui sua resenha">
+
     </div>
+    <input (click)="onCadastrar()" type="submit" name="action" placeholder="Enviar" class="enviar">
   </div>
-  <div class="coluna3">
-    <h2>Preço</h2>
-    <div class="search">
-      <input type="text" [(ngModel)]="vinho.preco" placeholder="Insira somente números">
-    </div>
-  </div>
-  </div>
-    <input (click)="onCadastrar()" type="submit" name="action" placeholder="Cadastrar" class="enviar">
-  </body>
-  
+
+</body>
