--- a/src/app/cadastro-vinho/cadastro-vinho.component.css
+++ b/src/app/cadastro-vinho/cadastro-vinho.component.css
@@ -197,3 +197,28 @@ input [type=text]{
   margin-left: 50px;
   margin-top: 50px;
 }
+
+button {
+  border: 0;
+  background: none;
+  display: block;
+  text-align: center;
+  border: 2px solid #f9a799;
+  padding: 5px 20px;
+  outline: none;
+  border-radius: 24px;
+  transition: 0.25s;
+  cursor: pointer;
+  color: white;
+  display: inline;
+  margin-left: 5%;
+  margin-top: 2%;
+}
+
+button:hover {
+  background-color: #0e2430;
+}
+
+button:focus {
+  background-color: #0e2430;
+}
